--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -11,3 +11,4 @@ jobs:
       - run: python -m pip install -U pip jsonschema
       - run: python -m jsonschema -i examples/trust-state.example.json schemas/trust-state.schema.json
       - run: python -m jsonschema -i examples/incident.example.json schemas/incident.schema.json
+      - run: python -m jsonschema -i examples/key-history.example.json schemas/key-history.schema.json
